	  (reported by Li Zhouy (Lzzy)).
	* 8/18/2011: The basic port to the FreeScale Kinetics TWR-K60N512 board is
	  now functional.
	* confgs/twr-k60n512: Add Kinetics TWR-K60N512 NSH configuration.
	* drivers/analog and include/nuttx/analog: Add ADC driver infrastructure
	  and TI ADS1255 driver developed and submitted by Li Zhouy (Lzzy)).
	* arch/arm/stm32/stm32_sdio.h and drivers/mmcsd/mmcsd.c:  Add logic to
	  multiplex usage of the GPIO pins (contributed by Uros Platise).
	* configs/twr-k60n512/nsh:  Added and verified a NuttShell (NSH)
	  configuration for the Freescale, Kinetis TWR-K60N512 board.

6.9 2011-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* arch/arm/src/kinetis/kinetis_sdhc.c: SDHC driver for Kinetis parts.
	  Initially check-in is just a crude port of the STM32 SDIO driver.
	  Much more is needed.
	* graphics/, include/nuttx/nx:  Add new NX interfaces for drawing
	  circles -- both circular outlines and filled circles.
	* graphic/nxglib/nxglib_spitline.c:  Add a "fudge factor" that eliminates
	  some problems for rendering nearly horizontal, wide lines.
	* drivers/analog, include/nuttx/analog, arch/arch/src/lpcxx:  (1) Add
	  updates to the ADS1255 driver, (2) fix errors from my last merge (sorry),
	  (3) Add DAC infrastructure, (4) add AD5410 DAC driver, and (5) add
	  LPC17xx ADC and DAC drivers.  All contributed by Li Zhuoyi (Lzyy).
	* tools/mkexport.sh:  Extended the script that implements the top-level
	  'make export' logic.  The script now also finds and bundles up all of
	  the architecture-specific header files as well.
	* drivers/arch/arm/src/stm32/stm32_i2c.c:  Add a reset to the I2C
	  initialization logic to prevent spurious interrups when the I2C
	  interrupts are enabled (submitted by Uros Platise).
	* Scripts/makefiles/documents.  Several adjustments, corrections and
	  typo fixes so that NuttX will build correctly on FreeBSD using the
	  ASH shell (submitted by Kurt Lidl).